log
Tue 07 May 2024 03:13:59 PM UTC: 
 tests:  1|8
total_score: 0/70
68e1305
Tue 07 May 2024 03:16:49 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
90d2c17
Tue 07 May 2024 03:20:57 PM UTC: 
 treemap.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:56:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   56 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
d734f43
Tue 07 May 2024 03:22:44 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:66:20: error: unused variable ‘new’ [-Werror=unused-variable]
   66 |         TreeNode * new = createTreeNode(key, value);
      |                    ^~~
treemap.c:56:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   56 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
da66fb1
Tue 07 May 2024 03:35:19 PM UTC: 
 treemap.c | 35 +++++++++++++++++++++++++++--------
 1 file changed, 27 insertions(+), 8 deletions(-)
In file included from test.c:4:
In function ‘insertTreeMap’,
    inlined from ‘insertTreeMap’ at treemap.c:48:6:
treemap.c:56:16: error: ‘*newNode.pair’ may be used uninitialized [-Werror=maybe-uninitialized]
   56 |         newNode->pair->key = key;
      |         ~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
575dd53
Tue 07 May 2024 03:37:15 PM UTC: 
 treemap.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  3|7
total_score: 5/70
b71f46c
Tue 07 May 2024 03:39:59 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
96ab311
Tue 07 May 2024 05:09:51 PM UTC: 
 treemap.c | 37 +++++++++++++------------------------
 1 file changed, 13 insertions(+), 24 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/cc5cfhkr.o: in function `insert_test1':
test.c:(.text+0x737): undefined reference to `insertTreeMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/cc5cfhkr.o: in function `insert_test2':
test.c:(.text+0x7c2): undefined reference to `insertTreeMap'
collect2: error: ld returned 1 exit status
Compilation failed
a8105ec
Tue 07 May 2024 05:10:34 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:75:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   75 |     return NULL;
      |            ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
71326e1
Tue 07 May 2024 05:10:41 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
2b289d8
Wed 08 May 2024 11:54:33 PM UTC: 
 treemap.c | 31 +++++++++++++++++++++++--------
 1 file changed, 23 insertions(+), 8 deletions(-)
 tests:  6|6
total_score: 15/70
636f2d7
Wed 08 May 2024 11:59:21 PM UTC: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  6|6
total_score: 15/70
84172c5
Thu 09 May 2024 12:04:38 AM UTC: 
 treemap.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
 tests:  13|5
total_score: 25/70
1ead5bd
